syntax = "proto2";

package com.yimq.common.protobuf.route;

option java_package = "com.yimq.common.protocol.route";
option java_outer_classname = "BrokerDataProto";

message BrokerData {
    optional string cluster = 1;
    optional string brokerName = 2;
    map<int32, string> brokerAddrs = 3;
}