syntax = "proto2";

package com.yimq.common.protobuf.topic;

option java_package = "com.yimq.common.topic";
option java_outer_classname = "TopicConfigProto";

message TopicConfig {
    optional string topic = 1;
    optional int32 queueNums = 2;
    optional int32 subscribeType = 3;
}

message TopicConfigWrapper {
    map<string, TopicConfig> topicConfigMap = 1;
}